# rail-curve-extractor

./: .gitignore  CVAT标注导出与转换说明.md  README.md  YOLO铁轨分割验证说明.md  centerline_graph_refine_result.md  config.example.json  launch_dom_tiler_gui.bat  launch_rail_curve_extractor_electron.bat  launch_rail_curve_extractor_gui.bat  pyproject.toml  rail_seg_v3_centerline_result.md  raw_drone_photo_probe_result.md  大疆智图DOM与DSM坐标说明.md  语义分割验证说明.md  通海港DOM到2D3D中心线后处理流程交接_v1.md  通海港DOM到2D3D中心线后处理流程交接_v2.md  通海港DOM到2D3D中心线后处理流程交接_v3.md  通海港DeepLab全图DOM叠加说明.md  通海港DeepLab拓扑后处理中心线说明.md  通海港DeepLab轨距配对中心线试点说明.md  通海港TA08语义分割证据说明.md  通海港全道岔支线中心线候选说明.md  通海港原分辨率DeepLab语义分割说明.md  通海港原始DOM优先重建路线.md  通海港双模型中心线重建说明.md  通海港线路拓扑先验.md
data/: README.md  config.example.json
desktop/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: REPRODUCIBLE_WORKFLOW.md
packaging/: rail_curve_extractor.spec
scripts/: add_z_to_deeplab_topology_centerline.py  analyze_handheld_las_constraints.py  audit_turnout_outer_rail_generalization.py  build_all_turnout_branch_centerlines.py  build_auto_dom_tile_index.py  build_auto_turnout_crossover_evidence.py  build_deeplab_gauge_pair_centerlines.py  build_deeplab_topology_centerline_network.py  build_deeplab_turnout_gauge_pair_centerlines.py  build_final_centerline_network.py  build_mainline_prior.py  build_portable.ps1  build_raw_dom_corridor_roi.py  build_semseg_smooth_review_package.py  build_ta08_r350_landmark_probe.py  build_ta08_semseg_radius_package.py  build_tonghaigang_topology_skeleton.py  build_track_band_priors.py  build_turnout_connector_candidates.py  build_turnout_crossover_connectors.py  build_turnout_template_connectors.py  convert_cvat_annotations.py  export_centerline_shapefile.py  export_cvat_reference_geometry.py  export_raw_dom_roi_sample_tiles.py  export_segmentation_evidence_overlay.py  extract_centerline_candidates.py  generate_app_icon.py  package_deeplab_centerline_network_v1.py  package_strict_auto_global_centerline_review.py  predict_deeplab_full_dom_overlay.py  predict_rail_seg_deeplab_images.py  predict_rail_seg_images.py  prototype_turnout_outer_rail_centerline.py  qa_deeplab_centerline_v1.py  qa_strict_auto_centerline_delivery.py  qa_tonghaigang_topology_prior.py  refine_centerline_graph.py  run_dom_to_3d_centerline_guided_pipeline.py  run_raw_dom_roi_fullpass.py  (+8 more)
src/: app_bootstrap.py
tests/: test_all_turnout_branch_centerlines.py  test_auto_turnout_crossover_evidence.py  test_backend_app.py  test_io.py  (+33 more)
(+41 files in other folders)
